Added ban-unban button handler to fix
